--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -47,7 +47,7 @@ small {
   font-size: 80%;
 }
 
-p, ol, ul, pre {
+p, ol, ul, pre, blockquote, details {
   margin: .5rem 0;
 }
 
@@ -62,6 +62,10 @@ p {
 
 b, strong {
   font-weight: 600;
+}
+
+i, em {
+  font-style: italic;
 }
 
 img {
@@ -107,6 +111,17 @@ pre {
     padding-right: 0.5rem;
     margin: 0;
     white-space: pre;
+  }
+}
+
+blockquote {
+  background-color: lighten($color-base, 17%);
+  border-left: 0.3rem solid $color-base;
+  padding: .5rem;
+
+  &.blue {
+    background-color: lighten(#6b94ff, 22%);
+    border-color: #6b94ff;
   }
 }
 
@@ -167,6 +182,7 @@ pre {
     flex-direction: column;
 
     @media(min-width: 768px) {
+      max-width: 100%;
       flex-direction: row;
     }
   }
@@ -176,6 +192,18 @@ pre {
 
     @media(min-width: 768px) {
       flex: 1;
+      padding-left: 0;
+      padding-right: 0;
+      max-width: 768px;
+      margin: 0 auto;
+    }
+
+    @media(min-width: 1000px) {
+      flex: 1;
+      padding-left: 0;
+      padding-right: 0;
+      max-width: 1000px;
+      margin: 0 auto;
     }
   }
 
@@ -238,4 +266,60 @@ pre {
       text-align: left;
     }
   }
+}
+
+details {
+  padding: .2rem;
+
+  summary {
+    position: relative;
+    display: inline-block;
+    padding: 5px 16px;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 20px;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    user-select: none;
+    border: 1px solid;
+    border-radius: 6px;
+
+    color: #000000;
+    background-color: #f6f8fa;
+    border-color: rgba(27, 31, 36, 0.15);
+    box-shadow: 0 1px 0 rgba(27, 31, 36, 0.04), inset 0 1px 0 rgba(255, 255, 255, 0.25);
+    transition: 80ms cubic-bezier(0.33, 1, 0.68, 1);
+    transition-property: color, background-color, box-shadow, border-color;
+
+    &:hover {
+      background-color: #f3f4f6;
+      border-color: rgba(27, 31, 36, 0.15);
+      transition-duration: .1s;
+    }
+
+    &:active {
+      background-color: hsla(220, 14%, 93%, 1);
+      border-color: rgba(27, 31, 36, 0.15);
+      transition: none;
+    }
+  }
+
+  &[open] {
+    summary {
+      background-color: hsla(220, 14%, 93%, 1);
+      border-color: rgba(27, 31, 36, 0.15);
+      transition: none;
+
+      &:hover {
+        background-color: hsla(220, 14%, 90%, 1);
+        border-color: rgba(27, 31, 36, 0.15);
+        transition-duration: .1s;
+      }
+    }
+  }
+}
+
+.mb-6 {
+  margin-bottom: 1rem;
 }
